force-app/main/default/objects/Account_Term__c/Account_Term__c.object-meta.xml
<CustomObject>
    <label>Account Term</label>
    <nameField>
        <label>Account Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>