force-app/main/default/objects/Account_Term__c/fields/chk_Active__c.field-meta.xml
<CustomField>
    <fullName>chk_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>