force-app/main/default/objects/Account_Term__c/fields/chk_AddtoTCs__c.field-meta.xml
<CustomField>
    <fullName>chk_AddtoTCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddTCs</label>
    <type>Checkbox</type>
</CustomField>