force-app/main/default/objects/Account_Term__c/fields/chk_Locked__c.field-meta.xml
<CustomField>
    <fullName>chk_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>