force-app/main/default/objects/Account_Term__c/fields/lkp_Account__c.field-meta.xml
<CustomField>
    <fullName>lkp_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Terms</relationshipLabel>
    <relationshipName>Account_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>