force-app/main/default/objects/Account_Term__c/fields/lkp_ParentTerm__c.field-meta.xml
<CustomField>
    <fullName>lkp_ParentTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Term</label>
    <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
    <relationshipLabel>Account Terms</relationshipLabel>
    <relationshipName>Account_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>