force-app/main/default/objects/Account_Term__c/fields/lkp_StandardTerm__c.field-meta.xml
<CustomField>
    <fullName>lkp_StandardTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Term</label>
    <referenceTo>SBQQ__QuoteTerm__c</referenceTo>
    <relationshipLabel>Account Terms (Standard Term)</relationshipLabel>
    <relationshipName>Account_Terms1</relationshipName>
    <type>Lookup</type>
</CustomField>