force-app/main/default/objects/Account_Term__c/fields/lkp_TemplateContent__c.field-meta.xml
<CustomField>
    <fullName>lkp_TemplateContent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Content</label>
    <referenceTo>SBQQ__TemplateContent__c</referenceTo>
    <relationshipLabel>Account Terms</relationshipLabel>
    <relationshipName>Account_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>