force-app/main/default/objects/Account_Term__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Term #</label>
    <type>AutoNumber</type>
</CustomField>