force-app/main/default/objects/Account_Term__c/fields/num_PrintOrder__c.field-meta.xml
<CustomField>
    <fullName>num_PrintOrder__c</fullName>
    <label>Print Order</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>