force-app/main/default/objects/Account_Term__c/fields/pkl_ConditionsMet__c.field-meta.xml
<CustomField>
    <fullName>pkl_ConditionsMet__c</fullName>
    <label>Conditions Met</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>