force-app/main/default/objects/Account_Term__c/fields/txr_Body__c.field-meta.xml
<CustomField>
    <fullName>txr_Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>